kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-demo
  namespace: kubernetes-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetes-demo
  template:
    metadata:
      labels:
        app: kubernetes-demo
    spec:
      containers:
        - name: kubernetes-demo
          image: valonjanuzaj/kubernetes-demo:latest
          ports:
            - containerPort: 8000
