kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-demo
  namespace: kubernetes-demo
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: kubernetes-demo
